--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@bem-react/classname": "^1.5.8",
+        "@bem-react/classnames": "^1.3.9",
+        "@gpn-prototypes/vega-ui": "^0.9.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -16,6 +19,7 @@
         "@types/react-router-dom": "^5.1.4",
         "@types/redux": "^3.6.0",
         "@types/redux-logger": "^3.0.7",
+        "bem-react": "^0.0.10",
         "classnames": "^2.2.6",
         "fp-ts": "^2.5.3",
         "io-ts": "^2.1.3",
