--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "@types/classnames": "^2.2.10",
+        "@types/d3": "^5.7.2",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
@@ -21,6 +22,7 @@
         "@types/redux-logger": "^3.0.7",
         "bem-react": "^0.0.10",
         "classnames": "^2.2.6",
+        "d3": "^5.16.0",
         "fp-ts": "^2.5.3",
         "io-ts": "^2.1.3",
         "rc-tree": "^3.1.5",
