--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@apollo/react-hooks": "^3.1.5",
         "@bem-react/classname": "^1.5.8",
         "@bem-react/classnames": "^1.3.9",
         "@gpn-prototypes/vega-ui": "^2.6.2",
@@ -20,12 +19,13 @@
         "@types/react-router": "^5.1.5",
         "@types/react-router-dom": "^5.1.4",
         "@types/react-transition-group": "^4.4.0",
+        "@types/react-virtualized": "^9.21.9",
         "@types/redux": "^3.6.0",
         "@types/redux-logger": "^3.0.7",
-        "apollo-boost": "^0.4.9",
         "bem-react": "^0.0.10",
         "classnames": "^2.2.6",
         "d3": "^5.16.0",
+        "faker": "^4.1.0",
         "fp-ts": "^2.5.3",
         "graphql": "^15.3.0",
         "io-ts": "^2.1.3",
@@ -33,11 +33,17 @@
         "monet": "^0.9.1",
         "rc-tree": "^3.1.5",
         "react": "^16.13.1",
+        "react-contextmenu": "^2.14.0",
+        "react-data-grid": "7.0.0-canary.16",
+        "react-data-grid-addons": "^7.0.0-alpha.24",
+        "react-dnd": "^11.1.3",
+        "react-dnd-html5-backend": "^11.1.3",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
+        "react-virtualized": "^9.21.2",
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
@@ -58,7 +64,8 @@
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addons": "^5.3.18",
         "@storybook/preset-create-react-app": "^2.1.1",
-        "@storybook/react": "^5.3.18",
+        "@storybook/react": "^5.3.19",
+        "@types/faker": "^4.1.12",
         "@types/d3": "^5.7.2",
         "eslint-plugin-prettier": "^3.1.3",
         "husky": "^4.2.5",
