--- a/nginx/app-nginx.tpl.conf
+++ b/nginx/app-nginx.tpl.conf
@@ -25,11 +25,11 @@ server {
 	application/vnd.ms-fontobject
 	image/svg+xml;
 
-  /* location /api/ { */
-	/* rewrite ^/api/(.*) /$1 break; */
-	/* proxy_pass ${BACKEND_API}/; */
-	/* proxy_redirect off; */
-  /* } */
+  # location /api/ {
+	# rewrite ^/api/(.*) /$1 break;
+	# proxy_pass ${BACKEND_API}/;
+	# proxy_redirect off;
+  # }
 
   location ~* \.(js|css|png|jpg|jpeg|gif|ico|html|woff|woff2|ttf|svg|eot|otf)$ {
 	expires 1M;
