--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         gitParameter branchFilter: 'origin/(.*)', defaultValue: 'jenkins-deploy', name: 'BRANCH_APP', type: 'PT_BRANCH', selectedValue: 'DEFAULT', listSize: '10', useRepository: '${scm.userRemoteConfigs[0].url}'
         choice(
             name: 'STAND',
-            choices: ['demo','qa','dev','1','2','3','4','5','6','7','8','9','10'],
+            choices: ['dev','qa','demo','1','2','3','4','5','6','7','8','9','10'],
             description: "Choose STAND for deploy"
         )
     }
@@ -59,7 +59,7 @@ pipeline {
                 echo "================== Build Docker image =================="
                 script {
                     docker.withRegistry("https://$DOCKER_REGISTRY", "ARTIFACTORY") {
-                        withCredentials([string(credentialsId: "$GITHUB_GPN_PROTOTYPES", variable: 'TOKEN')]) {
+                        withCredentials([string(credentialsId: "GITHUB_GPN_PROTOTYPES", variable: 'TOKEN')]) {
                             dockerImage = docker.build("$DOCKER_REGISTRY:$GIT_COMMIT_SHORT", "--build-args REPOSITORY_TOKEN=${TOKEN} -f $DOCKER_FILE .")
                         }
                     }
