--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -59,8 +59,8 @@ pipeline {
                 echo "================== Build Docker image =================="
                 script {
                     docker.withRegistry("https://$DOCKER_REGISTRY", "ARTIFACTORY") {
-                        withCredentials([string(credentialsId: "GITHUB_GPN_PROTOTYPES", variable: 'TOKEN')]) {
-                            dockerImage = docker.build("$DOCKER_REGISTRY:$GIT_COMMIT_SHORT", "--build-arg REPOSITORY_TOKEN=${TOKEN} -f $DOCKER_FILE .")
+                        withCredentials([string(credentialsId: "GITHUB_GPN_PROTOTYPES", variable: "TOKEN")]) {
+                            dockerImage = docker.build("$DOCKER_REGISTRY:$GIT_COMMIT_SHORT", "--build-arg REPOSITORY_TOKEN=$TOKEN -f $DOCKER_FILE .")
                         }
                     }
                 }
