--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -71,12 +71,9 @@ RUN echo "@gpn-prototypes:registry=https://npm.pkg.github.com"  >> ${HOME}/.npmr
 # add app
 COPY . ${APP_DIR}
 
-RUN cat ${HOME}/.npmrc
-
-
 RUN yarn install && yarn build
 
-# RUN rm -f ${HOME}/.npmrc
+RUN rm -f ${HOME}/.npmrc
 
 
 # run tests
