--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://localhost:8000"
+schema: "http://localhost:8000/graphql"
 # documents: "src/**/*.graphql"
 generates:
   src/generated/graphql.tsx:
