--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
         "@apollo/react-hooks": "^3.1.5",
         "@bem-react/classname": "^1.5.8",
         "@bem-react/classnames": "^1.3.9",
-        "@gpn-prototypes/vega-ui": "^0.9.1",
+        "@gpn-prototypes/vega-ui": "^2.6.2",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "@types/classnames": "^2.2.10",
         "@types/jest": "^24.0.0",
+        "@types/lodash": "^4.14.157",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
         "@types/react-redux": "^7.1.7",
         "@types/react-router": "^5.1.5",
         "@types/react-router-dom": "^5.1.4",
+        "@types/react-transition-group": "^4.4.0",
         "@types/redux": "^3.6.0",
         "@types/redux-logger": "^3.0.7",
         "apollo-boost": "^0.4.9",
@@ -27,6 +29,8 @@
         "fp-ts": "^2.5.3",
         "graphql": "^15.3.0",
         "io-ts": "^2.1.3",
+        "lodash": "^4.17.19",
+        "monet": "^0.9.1",
         "rc-tree": "^3.1.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -34,6 +38,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
+        "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-observable": "^1.2.0",
