--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -46,7 +46,6 @@ pipeline {
                             script: "printf \$(git rev-parse --short HEAD)",
                             returnStdout: true
                         )
-                        // buildName "#$BUILD_NUMBER-$GIT_COMMIT_SHORT"
                         buildName "#$BUILD_NUMBER-${params.BRANCH_APP}"
                         buildDescription "Executed @ ${NODE_NAME}. Build started by ${BUILD_USER}"
                     }
@@ -58,9 +57,9 @@ pipeline {
             steps {
                 echo "================== Build Docker image =================="
                 script {
-                    withCredentials([string(credentialsId: "GITHUB_GPN_PROTOTYPES", variable: "TOKEN")]) {
+                    withCredentials([usernamePassword(credentialsId: 'ARTIFACTORY', usernameVariable: 'NPM_LOGIN', passwordVariable: 'NPM_PASSWORD')]) {
                         docker.withRegistry("https://$DOCKER_REGISTRY", "ARTIFACTORY") {
-                            dockerImage = docker.build("$DOCKER_REGISTRY:$GIT_COMMIT_SHORT", "--build-arg REPOSITORY_TOKEN=${env.TOKEN} -f $DOCKER_FILE .")
+                            dockerImage = docker.build("$DOCKER_REGISTRY:$GIT_COMMIT_SHORT", "--build-arg NPM_LOGIN=${env.NPM_LOGIN} --build-arg NPM_PASSWORD=${env.NPM_PASSWORD} -f $DOCKER_FILE .")
                         }
                     }
                 }
