--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@apollo/react-hooks": "^3.1.5",
+        "@apollo/client": "^3.1.1",
         "@bem-react/classname": "^1.5.8",
         "@bem-react/classnames": "^1.3.9",
         "@gpn-prototypes/vega-ui": "^2.6.2",
@@ -22,7 +22,6 @@
         "@types/react-transition-group": "^4.4.0",
         "@types/redux": "^3.6.0",
         "@types/redux-logger": "^3.0.7",
-        "apollo-boost": "^0.4.9",
         "bem-react": "^0.0.10",
         "classnames": "^2.2.6",
         "d3": "^5.16.0",
