--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.1.1",
         "@bem-react/classname": "^1.5.8",
         "@bem-react/classnames": "^1.3.9",
         "@gpn-prototypes/vega-ui": "^2.6.2",
