--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@apollo/client": "^3.1.1",
         "@bem-react/classname": "^1.5.8",
         "@bem-react/classnames": "^1.3.9",
-        "@gpn-prototypes/vega-ui": "^2.6.2",
+        "@gpn-prototypes/vega-ui": "~2.10.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
