--- a/package.json
+++ b/package.json
@@ -102,5 +102,7 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "proxy": "http://localhost:8000"
+
 }
