--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
-        "react-virtualized": "^9.21.2",
         "react-transition-group": "^4.4.1",
+        "react-virtualized": "^9.21.2",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-observable": "^1.2.0",
@@ -60,14 +60,15 @@
         "@graphql-codegen/typescript": "^1.16.3",
         "@graphql-codegen/typescript-operations": "1.16.3",
         "@graphql-codegen/typescript-react-apollo": "1.16.3",
-        "@storybook/addon-actions": "^5.3.18",
-        "@storybook/addon-knobs": "^5.3.18",
-        "@storybook/addon-links": "^5.3.18",
-        "@storybook/addons": "^5.3.18",
-        "@storybook/preset-create-react-app": "^2.1.1",
-        "@storybook/react": "^5.3.19",
-        "@types/faker": "^4.1.12",
+        "@storybook/addon-actions": "^6.0.1",
+        "@storybook/addon-knobs": "^6.0.1",
+        "@storybook/addon-links": "^6.0.1",
+        "@storybook/addons": "^6.0.1",
+        "@storybook/preset-create-react-app": "^3.1.4",
+        "@storybook/react": "^6.0.1",
+        "@storybook/theming": "^6.0.1",
         "@types/d3": "^5.7.2",
+        "@types/faker": "^4.1.12",
         "eslint-plugin-prettier": "^3.1.3",
         "husky": "^4.2.5",
         "prettier": "^2.0.5",
