FIX nginx config

--- a/nginx/app-nginx.tpl.conf
+++ b/nginx/app-nginx.tpl.conf
@@ -26,8 +26,7 @@ server {
   image/svg+xml;
 
   location /graphql {
-    proxy_pass ${BACKEND_API}/;
-    proxy_redirect off;
+    proxy_pass ${BACKEND_API};
   }
 
   location ~* \.(js|css|png|jpg|jpeg|gif|ico|html|woff|woff2|ttf|svg|eot|otf)$ {
