--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@types/jest": "^24.0.0",
         "@types/lodash": "^4.14.157",
         "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
+        "@types/react": "^16.9.47",
         "@types/react-dom": "^16.9.0",
         "@types/react-redux": "^7.1.7",
         "@types/react-router": "^5.1.5",
@@ -104,5 +104,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:8000"
+    "proxy": "http://vg1-back-8.k8s17.gpn.cloud.nexign.com/"
 }
