VEGA1-88: add blank cells when import project data, add error notification for validateBeforeLoad, move ImportButton and ExportButton components to separate files

--- a/package.json
+++ b/package.json
@@ -104,5 +104,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://vg1-back-8.k8s17.gpn.cloud.nexign.com/"
+    "proxy": "http://localhost:8000"
 }
