--- a/package.json
+++ b/package.json
@@ -25,11 +25,6 @@
       "config": "./node_modules/@gpn-prototypes/frontend-configs/git/commitizen.js"
     }
   },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,7 +39,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.1",
-    "@babel/core": "7.9.0",
+    "@babel/core": "~7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.3",
@@ -57,7 +55,7 @@
     "@types/classnames": "^2.2.10",
     "@types/d3": "^5.7.2",
     "@types/faker": "^4.1.12",
-    "@types/jest": "^24.0.0",
+    "@types/jest": "^26.0.13",
     "@types/lodash": "^4.14.157",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.47",
@@ -72,8 +70,8 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "autoprefixer": "^9.8.6",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
@@ -148,6 +146,7 @@
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.5",
+    "ts-jest": "^26.3.0",
     "ts-pnp": "1.1.6",
     "typescript": "~4.0.2",
     "typescript-fsa": "^3.0.0",
@@ -172,7 +171,11 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
+    "@types/enzyme": "^3.10.6",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "cz-customizable": "^6.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
     "lint-staged": "^10.3.0",
