--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "lint:ts": "eslint '{src,types}/**/*.ts{,x}' --color",
     "start": "node scripts/start.js",
     "storybook": "start-storybook -p 9009 -s public --quiet",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "commit": "./node_modules/cz-customizable/standalone.js"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "node_modules/cz-customizable"
     },
     "cz-customizable": {
       "config": "./node_modules/@gpn-prototypes/frontend-configs/git/commitizen.js"
@@ -173,6 +174,7 @@
     "@storybook/theming": "^6.0.1",
     "@types/enzyme": "^3.10.6",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "commitizen": "^4.2.1",
     "cz-customizable": "^6.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
