--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -85,8 +86,10 @@
     "dotenv-expand": "5.1.0",
     "eslint": "^7.8.1",
     "eslint-config-react-app": "^5.2.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.19.0",
@@ -171,13 +174,10 @@
     "@storybook/theming": "^6.0.1",
     "@types/enzyme": "^3.10.6",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@typescript-eslint/parser": "^4.2.0",
     "commitizen": "^4.2.1",
     "cz-customizable": "^6.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.20.1",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
     "lint-staged": "^10.3.0",
