feature(table-validation): added the error output to the table

--- a/nginx/app-nginx.tpl.conf
+++ b/nginx/app-nginx.tpl.conf
@@ -29,6 +29,10 @@ server {
     proxy_pass ${BACKEND_API};
   }
 
+  location /files {
+    proxy_pass ${BACKEND_API};
+  }
+
   location ~* \.(js|css|png|jpg|jpeg|gif|ico|html|woff|woff2|ttf|svg|eot|otf)$ {
     expires 1M;
     access_log off;
