--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @d4rkm3z @ronikjkee @tsvetta @c1n1k @fixmylie @Inzephirum @hitmanet @maksim-kononov-csssr @ilchukovaolga @Davs777
+* @d4rkm3z @ronikjkee @c1n1k @fixmylie @Inzephirum @hitmanet @maksim-kononov-csssr @ilchukovaolga @Davs777
