--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/classnames": "^2.2.10",
     "@types/d3": "^5.7.2",
     "@types/faker": "^4.1.12",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^26.0.13",
     "@types/lodash": "^4.14.157",
     "@types/node": "^12.0.0",
@@ -96,6 +97,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "faker": "^4.1.0",
     "file-loader": "4.3.0",
+    "file-saver": "^2.0.2",
     "fp-ts": "^2.5.3",
     "fs-extra": "^8.1.0",
     "graphql": "^15.3.0",
@@ -160,6 +162,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.0",
     "@graphql-codegen/cli": "1.16.3",
     "@graphql-codegen/introspection": "1.16.3",
     "@graphql-codegen/typescript": "^1.16.3",
