--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.3",
+    "@gpn-prototypes/vega-hooks": "^0.5.2",
     "@gpn-prototypes/vega-ui": "~2.13.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
