--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.3",
+    "@gpn-prototypes/vega-sidebar": "^0.2.9",
     "@gpn-prototypes/vega-ui": "~2.13.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
@@ -72,6 +73,7 @@
     "@types/redux-logger": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "array-move": "^3.0.1",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -128,6 +130,7 @@
     "postcss-simple-vars": "^5.0.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-contenteditable": "^3.3.5",
     "react-contextmenu": "^2.14.0",
     "react-data-grid": "7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
