--- a/docker/Dockerfile-app-yc
+++ b/docker/Dockerfile-app-yc
@@ -10,7 +10,7 @@ USER root
 
 RUN npm install --global yarn
 
-# репозиторий для NPM
+# npm repo auth token
 ARG NPM_AUTH_TOKEN
 RUN echo "//npm.pkg.github.com/:_authToken=$NPM_AUTH_TOKEN" > /${HOME}/.npmrc
 
