--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.4.1",
+    "react-use": "^15.3.4",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -181,7 +182,6 @@
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
     "@types/single-spa-react": "^2.12.0",
-    "@types/uuid": "^8.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
