--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
+    "build:shell": "cross-env APP_MODE=shell yarn build",
     "build-storybook": "build-storybook -s public --quiet",
     "format": "prettier --write '{src,types,scripts}/**/*.{json,{j,t}s{,x},css,}'",
     "gen:codegen": "graphql-codegen --config codegen.yml",
@@ -14,6 +15,7 @@
     "lint:css": "stylelint 'src/**/*.css' --color",
     "lint:ts": "eslint '{src,types}/**/*.ts{,x}' --color",
     "start": "node scripts/start.js",
+    "dev:shell": "cross-env APP_MODE=shell cross-env PORT=9004 yarn start",
     "storybook": "start-storybook -p 9009 -s public --quiet",
     "test": "node scripts/test.js",
     "commit": "./node_modules/cz-customizable/standalone.js"
@@ -110,7 +112,6 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.19",
-    "mini-css-extract-plugin": "0.9.0",
     "monet": "^0.9.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
@@ -148,7 +149,9 @@
     "rxjs": "^6.5.5",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "single-spa-react": "^3.1.0",
     "style-loader": "0.23.1",
+    "systemjs-webpack-interop": "^2.1.2",
     "terser-webpack-plugin": "2.3.5",
     "ts-jest": "^26.3.0",
     "ts-pnp": "1.1.6",
@@ -159,8 +162,7 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "^5.1.3",
-    "workbox-webpack-plugin": "4.3.1"
+    "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.16.3",
@@ -175,7 +177,10 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
+    "@types/single-spa-react": "^2.12.0",
+    "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.2.1",
+    "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
@@ -184,7 +189,8 @@
     "prettier": "^2.1.1",
     "stylelint": "^13.7.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2"
+    "stylelint-prettier": "^1.1.2",
+    "webpack-import-map-plugin": "^1.0.0-alpha0"
   },
   "proxy": "http://localhost:8000"
 }
