--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "cz-customizable": "^6.3.0",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
+    "jest-junit": "^12.0.0",
     "lint-staged": "^10.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
