--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
     "@types/single-spa-react": "^2.12.0",
+    "@types/uuid": "^8.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
