--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.1.1",
+    "@apollo/client": "^3.2.9",
     "@babel/core": "~7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.12.0",
@@ -51,6 +51,7 @@
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.3",
     "@gpn-prototypes/vega-ui": "2.15.7",
+    "@gpn-prototypes/vega-sdk": "^1.4.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
