VEGA-1834: interface for hierarchy level management (#17)
* feature(components): add Interface for hierarchy level management

* VEGA-647: Исправить стили после перехода на РБ

* fix(vega-ui): исправить конфликт стилей

Убрал сборку стилей из vega-ui

Заменил импорты отдельных пакетов на общий @gpn-prototypes/vega-ui

Jira issue: VEGA-647

* fix(HierarchyLevelList): исправил баг с редактированием списка уровней иерархии

* fix(ContentEditable): удалил функцию onPaste

* test(isNumeric): вернул export

* test(columnsFactory): поправил тесты columnsFactory

* fix(build): исправил ошибку линтера

Co-authored-by: Kirill.Sadovnikov <kirill.sadovnikov@nedra.digital>
Co-authored-by: Sergey Gavshin <inzephirum@gmail.com>

--- a/package.json
+++ b/package.json
@@ -72,8 +72,10 @@
     "@types/react-virtualized": "^9.21.9",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "array-move": "^3.0.1",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -128,6 +130,7 @@
     "postcss-simple-vars": "^5.0.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-contenteditable": "^3.3.5",
     "react-contextmenu": "^2.14.0",
     "react-data-grid": "7.0.0-canary.16",
     "react-data-grid-addons": "^7.0.0-alpha.24",
