--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.3",
-    "@gpn-prototypes/vega-ui": "^2.15.1",
+    "@gpn-prototypes/vega-ui": "2.15.6-alpha.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -74,12 +74,14 @@
     "@types/redux-logger": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "array-to-tree": "^3.3.2",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "bem-cn": "^3.0.1",
     "bem-react": "^0.0.10",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
