--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:shell": "cross-env APP_MODE=shell yarn build",
     "build-storybook": "build-storybook -s public --quiet",
     "format": "prettier --write '{src,types,scripts}/**/*.{json,{j,t}s{,x},css,}'",
-    "gen:codegen": "graphql-codegen --config codegen.yml",
+    "gen:codegen": "dotenv -c local -- graphql-codegen --config codegen.yml",
     "lint": "npm-run-all lint:* --color",
     "lint-fix": "npm-run-all format lint-fix:*",
     "lint-fix:css": "stylelint 'src/**/*.css' --color --fix",
@@ -185,6 +185,7 @@
     "commitizen": "^4.2.1",
     "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
+    "dotenv-cli": "^4.0.0",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
     "jest-junit": "^12.0.0",
