[Alpha][VEGA-2850][VEGA-2779]+[VEGA-2921] Оптимизация запросов при загрузке страницы
* VEGA-2850: Оптимизация loadProject
* VEGA-2921: Умирает тред ответственные за отправку мутаций на фронте
* fix: некорректная высота компонента-обертки таблицы
* refactor: чистка кода

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 BROWSER=none
 REACT_APP_PROXY=http://localhost:8000
+#Адрес сервера
 BASE_API_URL=http://localhost:8080
+#Параметры для автогенерации graphql схемы
+AUTH_TOKEN=
+SCHEMA_PATH=http://<server_location>:<port>/graphql/<project_id>
