--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.4.0",
-    "@types/react-virtualized": "^9.21.9",
+    "@types/react-virtualized": "^9.21.10",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^8.3.0",
@@ -187,6 +187,7 @@
     "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
     "dotenv-cli": "^4.0.0",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
     "jest-junit": "^12.0.0",
