feat(components): переместил уведомление о совместной работе. Добавил возможно задавать интервал опроса из вне
Jira issue: VEGA-2875

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ BASE_API_URL=http://localhost:8080
 #Параметры для автогенерации graphql схемы
 AUTH_TOKEN=
 SCHEMA_PATH=http://<server_location>:<port>/graphql/<project_id>
+UPDATE_PROJECT_RECENTLY_EDITED_INTERVAL=30000
