VEGA-773: Разобраться с генерацией схемы (#73)
* chore(graphql): изменил название переменной окружения для генерации схемы

Jira issue: VEGA-773

* fix(codegen): переименовать PROJECT_VEGA_SCHEMA_PATH -> VEGA_PROJECT_SCHEMA_PATH

Jira issue: VEGA-773

Co-authored-by: Sergey Gavshin <inzephirum@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ REACT_APP_PROXY=http://localhost:8000
 BASE_API_URL=http://localhost:8080
 #Параметры для автогенерации graphql схемы
 AUTH_TOKEN=
-SCHEMA_PATH=http://<server_location>:<port>/graphql/<project_id>
+VEGA_SCHEMA_PATH=http://<server_location>:<port>/graphql/<project_id>
