--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -6,7 +6,7 @@
       "extensions": {
         "endpoints": {
           "Default GraphQL Endpoint": {
-            "url": "${env:SCHEMA_PATH}",
+            "url": "${env:VEGA_SCHEMA_PATH}",
             "headers": {
               "user-agent": "JS GraphQL",
               "Authorization": "${env:AUTH_TOKEN}"
@@ -21,7 +21,7 @@
       "extensions": {
         "endpoints": {
           "Project GraphQL Endpoint": {
-            "url": "${env:PROJECT_SCHEMA_PATH}",
+            "url": "${env:VEGA_PROJECT_SCHEMA_PATH}",
             "headers": {
               "user-agent": "JS GraphQL",
               "Authorization": "${env:AUTH_TOKEN}"
