--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:shell": "cross-env APP_MODE=shell yarn build",
     "build-storybook": "build-storybook -s public --quiet",
     "format": "prettier --write '{src,types,scripts}/**/*.{json,{j,t}s{,x},css,}'",
-    "gen:codegen": "dotenv -c local -- graphql-codegen --config codegen.yml",
+    "gen:codegen:dev": "dotenv -c local -- graphql-codegen --config codegen.project.dev.yml",
     "lint": "npm-run-all lint:* --color",
     "lint-fix": "npm-run-all format lint-fix:*",
     "lint-fix:css": "stylelint 'src/**/*.css' --color --fix",
