--- a/codegen.project.dev.yml
+++ b/codegen.project.dev.yml
@@ -7,6 +7,15 @@ schema:
 generates:
   src/generated/graphql.tsx:
     plugins:
-      - "typescript"
-      # - "typescript-operations"
-      # - "typescript-react-apollo"
+      - typescript
+      - typescript-operations
+      - time:
+          format: DD.MM.YYYY
+          message: "The file generated on: "
+      - add:
+          content:
+            - "/* Generated file via graphql codegen. Do not edit manually */"
+            - '/* eslint-disable */'
+hooks:
+  afterAllFileWrite:
+    - prettier --write
