--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@babel/preset-typescript": "^7.10.4",
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
-    "@gpn-prototypes/frontend-configs": "1.2.3",
-    "@gpn-prototypes/vega-ui": "2.15.11",
+    "@gpn-prototypes/frontend-configs": "1.2.15",
+    "@gpn-prototypes/vega-ui": "3.0.7",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -73,8 +73,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "array-move": "^3.0.1",
     "array-to-tree": "^3.3.2",
     "autoprefixer": "^9.8.6",
@@ -168,8 +168,10 @@
     "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.16.3",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.20.1",
     "@graphql-codegen/introspection": "1.16.3",
+    "@graphql-codegen/time": "^2.0.2",
     "@graphql-codegen/typescript": "^1.16.3",
     "@graphql-codegen/typescript-operations": "1.16.3",
     "@graphql-codegen/typescript-react-apollo": "1.16.3",
