--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@gpn-prototypes/frontend-configs/tsconfig",
   "compilerOptions": {
     "jsx": "react",
-    "target": "es5",
+    "target": "ES2020",
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
