--- a/package.json
+++ b/package.json
@@ -167,6 +167,8 @@
     "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.20.1",
     "@graphql-codegen/introspection": "1.16.3",
