--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
-    "@gpn-prototypes/frontend-configs": "1.2.15",
+    "@gpn-prototypes/frontend-configs": "1.2.16-alpha.2",
     "@gpn-prototypes/vega-ui": "3.0.7",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
@@ -91,16 +91,6 @@
     "d3": "^6.1.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^4.1.0",
     "file-loader": "4.3.0",
     "fp-ts": "^2.5.3",
@@ -164,11 +154,7 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "^5.1.3"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "webpack-merge": "^5.1.3",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.20.1",
     "@graphql-codegen/introspection": "1.16.3",
@@ -176,6 +162,19 @@
     "@graphql-codegen/typescript": "^1.16.3",
     "@graphql-codegen/typescript-operations": "1.16.3",
     "@graphql-codegen/typescript-react-apollo": "1.16.3",
+    "@types/single-spa-react": "^2.12.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
+    "jest-junit": "^12.0.0",
+    "webpack-import-map-plugin": "^1.0.0-alpha0",
+    "http-proxy-middleware": "^1.0.5",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
+    "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@storybook/addon-actions": "^6.0.1",
     "@storybook/addon-knobs": "^6.0.1",
     "@storybook/addon-links": "^6.0.1",
@@ -183,24 +182,24 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
-    "@types/single-spa-react": "^2.12.0",
-    "@types/uuid": "^8.3.0",
-    "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.2.1",
-    "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
     "dotenv-cli": "^4.0.0",
-    "eslint-plugin-lodash-fp": "^2.2.0-a1",
-    "http-proxy-middleware": "^1.0.5",
     "husky": "^4.2.5",
-    "jest-junit": "^12.0.0",
     "lint-staged": "^10.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "stylelint": "^13.7.0",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
-    "webpack-import-map-plugin": "^1.0.0-alpha0"
+    "eslint": "^7.13.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5"
   },
   "proxy": "http://localhost:8080"
 }
