--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node scripts/start.js",
     "dev:shell": "cross-env APP_MODE=shell cross-env PORT=9004 yarn start",
     "storybook": "start-storybook -p 9009 -s public --quiet",
-    "test": "node scripts/test.js",
+    "test": "node scripts/test.js --watchAll=false",
     "commit": "./node_modules/cz-customizable/standalone.js"
   },
   "config": {
