--- a/package.json
+++ b/package.json
@@ -50,6 +50,13 @@
     "@bem-react/classnames": "^1.3.9",
     "@gpn-prototypes/frontend-configs": "1.2.16-alpha.2",
     "@gpn-prototypes/vega-ui": "3.0.7",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.20.1",
+    "@graphql-codegen/introspection": "1.16.3",
+    "@graphql-codegen/time": "^2.0.2",
+    "@graphql-codegen/typescript": "^1.16.3",
+    "@graphql-codegen/typescript-operations": "1.16.3",
+    "@graphql-codegen/typescript-react-apollo": "1.16.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -71,6 +78,7 @@
     "@types/react-virtualized": "^9.21.10",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
+    "@types/single-spa-react": "^2.12.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -86,20 +94,27 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "3.4.2",
     "d3": "^6.1.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^4.1.0",
     "file-loader": "4.3.0",
     "fp-ts": "^2.5.3",
     "fs-extra": "^8.1.0",
     "graphql": "^15.3.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http-proxy-middleware": "^1.0.5",
     "identity-obj-proxy": "3.0.0",
     "io-ts": "^2.1.3",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-junit": "^12.0.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.19",
@@ -152,24 +167,9 @@
     "uuid": "^8.3.1",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "^5.1.3",
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.20.1",
-    "@graphql-codegen/introspection": "1.16.3",
-    "@graphql-codegen/time": "^2.0.2",
-    "@graphql-codegen/typescript": "^1.16.3",
-    "@graphql-codegen/typescript-operations": "1.16.3",
-    "@graphql-codegen/typescript-react-apollo": "1.16.3",
-    "@types/single-spa-react": "^2.12.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.2",
-    "jest-junit": "^12.0.0",
     "webpack-import-map-plugin": "^1.0.0-alpha0",
-    "http-proxy-middleware": "^1.0.5",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-lodash-fp": "^2.2.0-a1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "webpack-manifest-plugin": "2.2.0",
+    "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -184,13 +184,6 @@
     "commitizen": "^4.2.1",
     "cz-customizable": "^6.3.0",
     "dotenv-cli": "^4.0.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.3.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.1",
-    "stylelint": "^13.7.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
     "eslint": "^7.13.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -198,7 +191,14 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.3.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
+    "stylelint": "^13.7.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.1.2"
   },
   "proxy": "http://localhost:8080"
 }
