refactor(VEGA-2873): refactoring table data structure (#95)
* fix(VEGA-2873): Рефакторинг представления типа данных взаимодействия с бэкендом
* fix(DomainObjects): пустые значения должны быть null

Refs: VEGA-2873, VEGA-1462

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 BROWSER=none
 REACT_APP_PROXY=http://localhost:8000
+
 #Адрес сервера
 BASE_API_URL=http://localhost:8080
+
 #Параметры для автогенерации graphql схемы
 AUTH_TOKEN=
-VEGA_SCHEMA_PATH=http://<server_location>:<port>/graphql/<project_id>
+PROJECT_ID=
+VEGA_SCHEMA_PATH=http://${BASE_API_URL}/graphql
+VEGA_PROJECT_SCHEMA_PATH=http://${BASE_API_URL}/graphql/${PROJECT_ID}
+
+#Отладочные параметры для codegen
+DEBUG=1
+VERBOSE=1
