--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@babel/preset-typescript": "^7.10.4",
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
-    "@gpn-prototypes/frontend-configs": "1.2.16-alpha.2",
-    "@gpn-prototypes/vega-ui": "3.0.7",
+    "@gpn-prototypes/frontend-configs": "^1.3.1",
+    "@gpn-prototypes/vega-ui": "^3.1.7",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.20.1",
     "@graphql-codegen/introspection": "1.16.3",
